adding file of cleaned data and update data cleaning

--- a/notebooks/1.0-rbs-ecommercechurn-notebook.ipynb
+++ b/notebooks/1.0-rbs-ecommercechurn-notebook.ipynb
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
        "max        324.990000     1.000000  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,10 +1131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df_ecommerce.dropna().describe()"
+   ]
   }
  ],
  "metadata": {
