--- a/notebooks/1.0-rbs-ecommercechurn-notebook.ipynb
+++ b/notebooks/1.0-rbs-ecommercechurn-notebook.ipynb
@@ -3062,6 +3062,350 @@
     "testing = pd.DataFrame(transformer.fit_transform(X_train),columns=transformer.get_feature_names_out())\n",
     "testing.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modeling and Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check via Classification Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classification Models\n",
+    "logreg = LogisticRegression(random_state=0)\n",
+    "knn = KNeighborsClassifier()\n",
+    "dt = DecisionTreeClassifier(random_state=0)\n",
+    "rf = RandomForestClassifier(random_state=0)\n",
+    "xgb = XGBClassifier()\n",
+    "lgbm = lgb.LGBMClassifier(objective='binary', random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scalers\n",
+    "robust = RobustScaler()\n",
+    "minmax = MinMaxScaler()\n",
+    "standard = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Benchmarking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### K-Fold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 326, number of negative: 1827\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000633 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 380\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2153, number of used features: 15\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.151417 -> initscore=-1.723533\n",
+      "[LightGBM] [Info] Start training from score -1.723533\n",
+      "[LightGBM] [Info] Number of positive: 326, number of negative: 1827\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000403 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 378\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2153, number of used features: 15\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.151417 -> initscore=-1.723533\n",
+      "[LightGBM] [Info] Start training from score -1.723533\n",
+      "[LightGBM] [Info] Number of positive: 327, number of negative: 1827\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000342 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 380\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2154, number of used features: 15\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.151811 -> initscore=-1.720470\n",
+      "[LightGBM] [Info] Start training from score -1.720470\n",
+      "[LightGBM] [Info] Number of positive: 327, number of negative: 1827\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000406 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 379\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2154, number of used features: 15\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.151811 -> initscore=-1.720470\n",
+      "[LightGBM] [Info] Start training from score -1.720470\n",
+      "[LightGBM] [Info] Number of positive: 326, number of negative: 1828\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000411 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 380\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2154, number of used features: 15\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.151346 -> initscore=-1.724080\n",
+      "[LightGBM] [Info] Start training from score -1.724080\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean F2</th>\n",
+       "      <th>sdev</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>XGBoost</th>\n",
+       "      <td>0.764466</td>\n",
+       "      <td>0.010307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LightGBM</th>\n",
+       "      <td>0.763709</td>\n",
+       "      <td>0.028536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>0.746753</td>\n",
+       "      <td>0.014245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>0.728055</td>\n",
+       "      <td>0.019733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <td>0.526977</td>\n",
+       "      <td>0.021606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNN</th>\n",
+       "      <td>0.431435</td>\n",
+       "      <td>0.041555</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      mean F2      sdev\n",
+       "model                                  \n",
+       "XGBoost              0.764466  0.010307\n",
+       "LightGBM             0.763709  0.028536\n",
+       "Decision Tree        0.746753  0.014245\n",
+       "Random Forest        0.728055  0.019733\n",
+       "Logistic Regression  0.526977  0.021606\n",
+       "KNN                  0.431435  0.041555"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models = [logreg,knn,dt,rf,xgb,lgbm]\n",
+    "score=[]\n",
+    "rata=[]\n",
+    "std=[]\n",
+    "\n",
+    "f2_score = make_scorer(fbeta_score,beta=2)\n",
+    "\n",
+    "for i in models:\n",
+    "    skfold=StratifiedKFold(n_splits=5)\n",
+    "    estimator=Pipeline([\n",
+    "        ('preprocess',transformer),\n",
+    "        ('scaler', robust),\n",
+    "        ('model',i)])\n",
+    "    model_cv=cross_val_score(estimator,X_train,y_train,cv=skfold,scoring=f2_score)\n",
+    "    score.append(model_cv)\n",
+    "    rata.append(model_cv.mean())\n",
+    "    std.append(model_cv.std())\n",
+    "    \n",
+    "pd.DataFrame({\n",
+    "    'model':['Logistic Regression', 'KNN', 'Decision Tree', 'Random Forest', 'XGBoost', 'LightGBM'],\n",
+    "    'mean F2':rata,\n",
+    "    'sdev':std}).set_index('model').sort_values(by='mean F2',ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model yang digunakan adalah model F2, dimana model ini dapat meminimalkan false negatif yang jauh lebih penting daripada meminimalkan false positive juga memberikan bobot pada recall daripada precission. F2 Score ini juga menggunakan pemberatan rata-rata dari precission (tingkat akurasi prediksi positif) dan recall (kemampuan model dalam mengidentifikasi semua instance positif). \n",
+    "\n",
+    "Dari semua model benchmark yang diuji, dua teratas yang memiliki mean unggul dibandingkan yang lain adalah XGBoost (0.764466) dan LightGBM (0.763709). Hal ini menunjukkan bahwa semakin tinggi rata-rata, maka akan semakin bagus modelnya. Sementara semakin standar deviasi kecil, maka semakin stabil model yang diambil. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 408, number of negative: 2284\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000767 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 380\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2692, number of used features: 15\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.151560 -> initscore=-1.722416\n",
+      "[LightGBM] [Info] Start training from score -1.722416\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Models</th>\n",
+       "      <th>F2_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBClassifier(base_score=None, booster=None, c...</td>\n",
+       "      <td>0.734694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LGBMClassifier(objective='binary', random_stat...</td>\n",
+       "      <td>0.704082</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Models  F2_score\n",
+       "0  XGBClassifier(base_score=None, booster=None, c...  0.734694\n",
+       "1  LGBMClassifier(objective='binary', random_stat...  0.704082"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models = [xgb,lgbm]\n",
+    "score_f2 = []\n",
+    "\n",
+    "for i in models:\n",
+    "    estimator = Pipeline([\n",
+    "        ('preprocess',transformer),\n",
+    "        ('scaler', robust), \n",
+    "        ('model', i)\n",
+    "    ])\n",
+    "    estimator.fit(X_train, y_train)\n",
+    "    y_pred = estimator.predict(X_test)\n",
+    "    score_f2.append(fbeta_score(y_test, y_pred, beta=2))\n",
+    "\n",
+    "score_tuning_before = pd.DataFrame({'Models':models, 'F2_score':score_f2})\n",
+    "score_tuning_before"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ketika dilakukan predict to test set, performa XGBoost lebih baik F2-Score nya (0.734694) daripada LGBM Classifier (0.704082)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyperparameter Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model XGBoost digunakan untuk menjadi model akhir karena model XGBoost memiliki performa yang lebih baik daripada Random Forest. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
